--- a/style.css
+++ b/style.css
@@ -165,14 +165,17 @@ header {
     margin: 0;
 }
 
+.accomodation__info {
+    display: flex;
+    flex-direction: column;
+}
+
 .accomodation__info p {
     margin: 0;
 }
 
 .asidelist__info {
-    padding: 10px 18px;
-    display: flex;
-    flex-direction: column;
+    padding: 10px 18px 7px 18px;
     justify-content: space-between;
 }
 
@@ -208,11 +211,13 @@ header {
 }
 
 .mainlist__info {
-    padding: 6px 12px;
+    padding: 6px 12px 9px 12px;
+    flex-grow: 1;
 }
 
 .mainlist__info p {
     padding: 5px 0 6px 0;
+    flex-grow: 1;
 }
 
 .mainlist__loadmore {
